--- a/static/css/testing.css
+++ b/static/css/testing.css
@@ -6,11 +6,14 @@
 */
 
 /*  */
+.signature-color {
+    background-color: #4169e1;
+}
 
 .square-container {
     /* width: 200px; /* Set the desired width for the square container */
     /* height: 200px; /* Set the same height as the width for a square container */
-    border: 30px solid #4169e1; /* Set the border color and thickness */
+    border: 20px solid #4169e1; /* Set the border color and thickness */
     margin: 20px auto; /* Center the square container horizontally and provide space at the top */
 }
 
@@ -24,6 +27,13 @@
     color: #orange; /* New text color for the active link */
     font-weight: bold; /* New font weight for the active link */
     /* Add other custom styles as needed */
+}
+
+/* IMAGES */
+
+.logo {
+  width: 700px;
+  height: 400px;
 }
 
 
@@ -44,7 +54,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #4169e1;
 }
 
-.site-header .navbar-nav .nav-link {
+/* .site-header .navbar-nav .nav-link {
   color: #cbd5db;
 
 }
@@ -59,10 +69,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .add-space {
   padding-left: 200px;
-}
+} */
 
 /* CONTENT */
-
+/* 
 .content-section {
   background: #ffffff;
   padding: 10px 20px;
@@ -117,11 +127,11 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
-
+ */
 /* FORMS */
 
 /* trying to change button color */
-.form-group .btn{
+/* .form-group .btn{
   border-color: #4169e1;
   color: #3759C7;
 }
@@ -129,17 +139,10 @@ a.article-title:hover {
 .form-group .btn:hover {
   color: whitesmoke;
   background-color: #4169e1;
-}
-
-/* IMAGES */
-
-.logo {
-  width: 700px;
-  height: 400px;
-}
+} */
 
 /* ABOUT SECTION */
-
+/* 
 .about-section-space {
   font-family: Noto Mono;
   padding-top: 25px;
@@ -154,10 +157,10 @@ a.article-title:hover {
   font-size: large;
 
 }
-
+ */
 /* CONTACT SECTION */
 
-.grid-container {
+/* .grid-container {
   font-family: Noto Mono;
   color: #000000;
   grid-template-areas: 
@@ -178,17 +181,17 @@ a.article-title:hover {
 .grid-item-2 {
   padding-top: 25px;
   grid-area: role;
-/*  padding-left: 25px;*/
+ padding-left: 25px;
 }
 
 .grid-item-3 {
   padding-top: 10px;
   grid-area: information;
-/*  padding-left: 25px;*/
+ padding-left: 25px;
 
 }
 
 .contact {
   font-size: 2.3rem;
   padding-bottom: 50px;
-}
+} */
