--- a/templates/index.html
+++ b/templates/index.html
@@ -39,50 +39,58 @@
       </nav>
     </header>
     
-    <div class="container-md">
-        <div class="row">
-
-            <div class="col-md-4 order-md-2 d-flex justify-content-center align-items-center"> <!-- sidebar -->
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Request Estimate</h5>
-                        <!-- <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6> -->
-                        <form id="request_estimate" method="POST" action="/request-estimate">
-                            <div class="mb-3">
-                                <label for="telephone" class="form-label">Phone number</label>
-                                <input type="tel" class="form-control" id="telephone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" title="Please enter a valid phone number (e.g., 123-456-7890)">
-                            </div>
-
-                            <div class="mb-3">
-                              <label for="email" class="form-label">Email address</label>
-                              <input type="email" class="form-control" id="email" placeholder="name@example.com">
-                            </div>
-                            <div class="mb-3">
-                              <label for="description" class="form-label">Description</label>
-                              <textarea class="form-control" id="description" rows="3"></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-8 order-md-1"> <!-- main -->
-                <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                </p>
-            </div>
-        </div>
+    <div class="container-lg">
+        
     </div>
     <div class="container-md square-container">
         <div class="text-center">
             <img class="logo" src="/static/img/logoemptied.png">
-            
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-    <script src="/static/js/requestEstimate.js"></script>
-
+    <div class="container-lg" >
+        <div class="card">
+            <div class="card-header">
+            Featured
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Request Estimate</h5>
+                <form id="request_estimate" method="POST" action="/request-estimate">
+                    <!-- name -->
+                    <div class="mb-3">
+                      <label for="name" class="form-label">Full Name</label>
+                      <input type="text" class="form-control" id="name" placeholder="Walter Melon">
+                    </div>
+                    <!-- phone -->
+                    <div class="mb-3">
+                        <label for="telephone" class="form-label">Phone number</label>
+                        <input type="tel" class="form-control" id="telephone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" title="Please enter a valid phone number (e.g., 123-456-7890)">
+                    </div>
+                    <!-- email -->
+                    <div class="mb-3">
+                      <label for="email" class="form-label">Email address</label>
+                      <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                    </div>
+                    <div class="mb-3">
+                      <label for="description" class="form-label">Description</label>
+                      <textarea class="form-control" id="description" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <br></br>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="{{ .EstimateJS }}"></script>
 </body>
+<footer class="footer signature-color">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <p class="white-text" >&copy; 2023 {{ .CompanyName }}. All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+</footer>
+
 </html>
