--- a/hpaint/main/templates/about.html
+++ b/hpaint/main/templates/about.html
@@ -6,49 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="{{ .StaticURL }}">
-    {{ if .Title }}
-        <title>Higginbotham Painting, Inc. - {{ .Title }} </title>
-    {{ else }}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/testing.css') }}">
+    {% if context['title'] %}
+        <title>Higginbotham Painting, Inc. - {{ context['title'] }}</title>
+    {% else %}
         <title>Higginbotham Painting, Inc.</title>
-    {{ end }}
+    {% endif %}
 </head>
 <body>
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="{{ .Endpoints.Index }}">Higginbotham Painting, Inc.</a>
+          <a class="navbar-brand mr-4" href="{{ url_for('main.index') }}">Higginbotham Painting, Inc.</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
           <div class="container-md">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ .Endpoints.Index }}">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{{ url_for('main.index') }}">Home</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ .Endpoints.About }}">About Us</a>
+                        <a class="nav-link" href="{{ url_for('main.about') }}">About Us</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ .Endpoints.Services }}">Services</a>
+                        <a class="nav-link" href="{{ url_for('main.services') }}">Services</a>
                     </li>
-                </ul>	      	
+                </ul>		      	
           </div>
       </nav>
     </header>
 
-    <h1>{{ .Page }}</h1>
-
-
-    <!-- <main role="main" class="container"> -->
-      <!-- <div class="row"> -->
-        <!-- <div class="col-md-8"> -->
-
-        <!-- </div> -->
-
-    <!-- </main> -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
