--- a/hpaint/main/templates/index.html
+++ b/hpaint/main/templates/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="{{ .StaticURL }}">
-    {{ if .Title }}
-        <title>Higginbotham Painting, Inc. - {{ .Title }}</title>
-    {{ else }}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/testing.css') }}">
+    {% if context['title'] %}
+        <title>Higginbotham Painting, Inc. - {{ context['title'] }}</title>
+    {% else %}
         <title>Higginbotham Painting, Inc.</title>
-    {{ end }}
+    {% endif %}
 </head>
 <body>
     <header class="site-header">
@@ -24,15 +24,15 @@
           <div class="container-md">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ .Endpoints.Index }}">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{{ url_for('main.index') }}">Home</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ .Endpoints.About }}">About Us</a>
+                        <a class="nav-link" href="{{ url_for('main.about') }}">About Us</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ .Endpoints.Services }}">Services</a>
+                        <a class="nav-link" href="{{ url_for('main.services') }}">Services</a>
                     </li>
                 </ul>	      	
           </div>
@@ -81,13 +81,13 @@
     </div>
     <br></br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="{{ .EstimateJS }}"></script>
+    <script src="{{ url_for('static', filename='js/requestEstimate.js') }}"></script>
 </body>
 <footer class="footer signature-color">
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <p class="white-text" >&copy; 2023 {{ .CompanyName }}. All rights reserved.</p>
+                <p class="white-text" >&copy; 2023 {{ context['company_name'] }}. All rights reserved.</p>
             </div>
         </div>
     </div>
